--- a/modelinterface.html
+++ b/modelinterface.html
@@ -1,3 +1,53 @@
-<form action="http://139.59.28.40/api/testmodel" method="post" enctype="multipart/form-data">
-    <input type="text" name="testdata">
-  </form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Shopping Mall Clustering</title>
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 50px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            max-width: 500px;
+        }
+        h1 {
+            text-align: center;
+        }
+        label {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        input[type="range"] {
+            width: 100%;
+            margin-bottom: 20px;
+        }
+        button[type="submit"] {
+            padding: 10px 20px;
+            background-color: #2196f3;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button[type="submit"]:hover {
+            background-color: #0d8cf0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Shopping Mall Clustering</h1>
+    <form method="POST" action="/cluster">
+        <label for="n_clusters">Number of Clusters:</label>
+        <input type="range" name="n_clusters" min="2" max="10" step="1" value="3">
+        <output name="n_clusters_output">3</output>
+        <button type="submit">Cluster</button>
+    </form>
+</body>
+</html>
